--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "1.1.1",
+    "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "fumadocs-core": "^16.6.1",
+    "fumadocs-mdx": "^14.2.7",
+    "fumadocs-ui": "^16.6.1",
     "lucide-react": "^0.553.0",
     "next": "^16.1.1",
     "next-themes": "^0.4.6",
@@ -24,6 +28,8 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "eslint": "^9.0.0",
+    "eslint-config-next": "^16.1.6",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
     "typescript": "^5"
