--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "fumadocs-core": "^16.6.1",
     "fumadocs-mdx": "^14.2.7",
     "fumadocs-ui": "^16.6.1",
